[package]
name = "quest_test"
version = "0.1.0"
authors = ["Jonathan Nilsson <jonathan@voysys.se>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
jni-sys = "0.3"
ndk = "0.2"
ndk-glue = "0.2"
ndk-sys = "0.2"

[build-dependencies]
cc = { version = "1", features = ["parallel"] }

[package.metadata.android]
apk_label = "quest_test"
target_sdk_version = 26
min_sdk_version = 26
fullscreen = true
opengles_version = [3, 1]
orientation = "landscape"
build_targets = [ "aarch64-linux-android" ]
assets = "assets"

[[package.metadata.android.feature]]
name = "android.hardware.vr.headtracking"

[[package.metadata.android.feature]]
name = "android.permission.INTERNET"

[[package.metadata.android.feature]]
name = "android.permission.MODIFY_AUDIO_SETTINGS"

[[package.metadata.android.feature]]
name = "android.permission.ACCESS_NETWORK_STATE"

[[package.metadata.android.application_metadatas]]
name = "com.samsung.android.vr.application.mode"
value = "vr_only"

[[package.metadata.android.application_metadatas]]
name = "com.oculus.supportedDevices"
value = "all"

[[package.metadata.android.activity_metadatas]]
name = "com.oculus.vr.focusaware"
value = "true"